--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Category/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Category/Index.cshtml
@@ -9,10 +9,10 @@
         <div class="col-md-12">
             <div classs="panel panel-default">
                 <div classs="panel-heading">
-                    <h3>Especialidades</h3>
+                    <h3>Categorias</h3>
 
                     <p>
-                        <a asp-action="Create" class="btn btn-outline-primary">Crear Nuevo</a>
+                        <a asp-action="Create" class="btn btn-outline-primary">Crear Nueva</a>
                     </p>
                 </div>
                 <div classs="panel-body">
