--- a/FoodTrucksMenus/FoodTrucksMenus/wwwroot/css/site.css
+++ b/FoodTrucksMenus/FoodTrucksMenus/wwwroot/css/site.css
@@ -16,3 +16,13 @@ html {
 body {
   margin-bottom: 60px;
 }
+footer {
+    background-color: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    text-align: center;
+    padding-top:30px;
+    color: white;
+}
