--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Shared/_Layout.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Shared/_Layout.cshtml
@@ -29,6 +29,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categorias</a>
                         </li>
                     </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
                 </div>
             </div>
         </nav>
