--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Details.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Details.cshtml
@@ -10,7 +10,7 @@
         <partial name="_MenuDetails" />
     </div>
     <div>
-        <a asp-action="AddProducts" asp-route-id="@Model?.Id" class="btn btn-outline-primary">Adicionar Productos</a>
+        <a asp-action="AddProduct" asp-route-id="@Model?.Id" class="btn btn-outline-primary">Adicionar Productos</a>
         <a asp-action="Index" class="btn btn-outline-success">Regresar</a>
     </div>
 
