--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Index.cshtml
@@ -90,8 +90,8 @@
                     "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json"
                 },
                 "aLengthMenu": [
-                    [25, 50, 100, 200, -1],
-                    [25, 50, 100, 200, "Todos"]
+                    [10, 25, 50, 100, 200, -1],
+                    [10, 25, 50, 100, 200, "Todos"]
                 ]
             });
         });
