--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Category/Create.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Category/Create.cshtml
@@ -16,8 +16,8 @@
                 <span asp-validation-for="NameCat" class="text-danger"></span>
             </div>
             <div class="form-group mt-2">
-                <input type="submit" value="Crear" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-warning">Volver a la lista</a>
+                <input type="submit" value="Crear" class="btn btn-outline-secondary" />
+                <a asp-action="Index" class="btn btn-outline-secondary">Volver a la lista</a>
             </div>
         </form>
     </div>
