--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Category/Delete.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Category/Delete.cshtml
@@ -21,7 +21,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Borrar" class="btn btn-danger" /> 
-         <a asp-action="Index" class="btn btn-warning">Volver a la lista</a>
+        <input type="submit" value="Borrar" class="btn btn-outline-secondary" /> 
+         <a asp-action="Index" class="btn btn-outline-secondary">Volver a la lista</a>
     </form>
 </div>
