--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Category/Edit.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Category/Edit.cshtml
@@ -18,8 +18,8 @@
             </div>
             
             <div class="form-group mt-2">
-                <input type="submit" value="Editar" class="btn btn-primary" />
-                <a asp-action="Index" class="btn btn-warning">Volver a la lista</a>
+                <input type="submit" value="Editar" class="btn btn-outline-secondary" />
+                <a asp-action="Index" class="btn btn-outline-secondary">Volver a la lista</a>
             </div>
         </form>
     </div>
