--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Platform/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Platform/Index.cshtml
@@ -4,14 +4,14 @@
     ViewData["Title"] = "Index";
 }
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
-<div class="container mt-5">
+<div class="container mt-2">
     <div class="row">
         <div class="col-md-12">
             <div classs="panel panel-default">
                 <div classs="panel-heading">
                     <h3>Plataformas</h3>
                     <p>
-                        <a asp-action="Create" class="btn btn-outline-primary">Crear Nueva</a>
+                        <a asp-action="Create" class="btn btn-outline-secondary">Crear Nueva</a>
                     </p>
                 </div>
                 <div classs="panel-body">
@@ -32,14 +32,14 @@
                             {
                                 <tr style="vertical-align:middle">
                                     <td>
-                                        <h3>@Html.DisplayFor(modelItem => item.Name)</h3>
+                                        <h4>@Html.DisplayFor(modelItem => item.Name)</h4>
                                     </td>
                                     <td>
-                                        <img src="@item.ImageFullPath" style="width:100px;" />
+                                        <img src="@item.ImageFullPath" style="width:60px;" />
                                     </td>
                                     <td>
-                                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
-                                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger">Borrar</a>
+                                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-pencil-square"></i></a>
+                                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-trash"></i></a>
                                     </td>
                                 </tr>
                             }
