--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Product/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Product/Index.cshtml
@@ -5,15 +5,15 @@
     ViewData["Title"] = "Index";
 }
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
-<p>
-    <a asp-action="Create" class="btn btn-outline-primary">Crear Nuevo</a>
-</p>
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title">Productos</h3>
             </div>
+            <p>
+                <a asp-action="Create" class="btn btn-outline-secondary">Crear Nuevo</a>
+            </p>
             <div class="panel-body">
                 <table class="table table-hover table-responsive table-striped" id="MyTable">
                     <thead>
@@ -65,12 +65,12 @@
                                     @Html.DisplayFor(modelItem => item.MenuNmber)
                                 </td>
                                 <td>
-                                    <img src="@item.ImageFullPath" style="width:100px;" />
+                                    <img src="@item.ImageFullPath" style="width:40px;" />
                                 </td>
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-warning"><i class="fa-solid fa-pen-to-square"></i></a>
-                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-info"><i class="fa-solid fa-circle-info"></i></a>
-                                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i></a>
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-pencil-square"></i></a>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-clipboard-minus"></i></a>
+                                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-trash"></i></a>
                                 </td>
                             </tr>
                         }
