--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Product/_CreateProduct.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Product/_CreateProduct.cshtml
@@ -7,7 +7,6 @@
             <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
-
         <div class="form-group">
             <label asp-for="Description" class="control-label"></label>
             <textarea asp-for="Description" class="form-control"></textarea>
@@ -24,27 +23,14 @@
             <select asp-for="MenuId" asp-items="Model.Menus" class="form-control"></select>
             <span asp-validation-for="MenuId" class="text-danger"></span>
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-check">
-                    <label asp-for="InOfert" class="form-check-label"></label>
-                    <input asp-for="InOfert" type="checkbox" class="form-check-input" />
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-check">
-                    <label asp-for="Status" class="form-check-label"></label>
-                    <input asp-for="Status" type="checkbox" class="form-check-input" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
         <div class="form-group">
             <label asp-for="Cant" class="control-label"></label>
             <input asp-for="Cant" class="form-control" />
             <span asp-validation-for="Cant" class="text-danger"></span>
         </div>
+    </div>
+    <div class="col-md-6">
+        
 
         <div class="form-group">
             <label asp-for="PurchasePrice" class="control-label"></label>
@@ -57,11 +43,35 @@
             <input asp-for="PriceSale" class="form-control" />
             <span asp-validation-for="PriceSale" class="text-danger"></span>
         </div>
+        <div class="form-group">
+            <label asp-for="PriceOfert" class="control-label"></label>
+            <input asp-for="PriceOfert" class="form-control" />
+            <span asp-validation-for="PriceOfert" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="PrepTime" class="control-label"></label>
+            <input asp-for="PrepTime" class="form-control" />
+            <span asp-validation-for="PrepTime" class="text-danger"></span>
+        </div>
 
         <div class="form-group">
             <label asp-for="ImageFile" class="control-label"></label>
             <input asp-for="ImageFile" class="form-control" type="file" />
             <span asp-validation-for="ImageFile" class="text-danger"></span>
+        </div>
+        <div class="row mt-1">
+            <div class="col-md-6">
+                <div class="form-check">
+                    <label asp-for="InOfert" class="form-check-label"></label>
+                    <input asp-for="InOfert" type="checkbox" class="form-check-input" />
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-check">
+                    <label asp-for="Status" class="form-check-label"></label>
+                    <input asp-for="Status" type="checkbox" class="form-check-input" />
+                </div>
+            </div>
         </div>
     </div>
 </div>
