--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Product/_ProductDetails.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Product/_ProductDetails.cshtml
@@ -34,6 +34,12 @@
     <dd class = "col-sm-10">
         @Html.DisplayFor(model => model.MenuNmber)
     </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.PrepMins) 
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.PrepMins) Mins
+    </dd>
     <dt class = "col-sm-2">
         @Html.DisplayNameFor(model => model.Category.NameCat)
     </dt>
