--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Countries/Details.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Countries/Details.cshtml
@@ -44,10 +44,9 @@
                                         @Html.DisplayFor(modelItem => item.CitiesNumber)
                                     </td>
                                     <td>
-                                        <a asp-action="EditStates" asp-route-id="@item.Id" class="btn btn-outline-warning">Editar</a>
-                                        <a asp-action="DetailsStates" asp-route-id="@item.Id" class="btn btn-outline-secondary">Detalles</a>
-                                        <a asp-action="DeleteState" asp-route-id="@item.Id" class="btn btn-outline-danger">Borrar</a>
-                                    </td>
+                                        <a asp-action="EditStates" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-pencil-square"></i></a>
+                                        <a asp-action="DetailsStates" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-clipboard-minus"></i></a>
+                                        <a asp-action="DeleteState" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-trash"></i></a>
                                 </tr>
                             }
                         </tbody>
