--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Countries/DetailsStates.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Countries/DetailsStates.cshtml
@@ -46,8 +46,9 @@
                                         @Html.DisplayFor(modelItem => item.Name)
                                     </td>
                                     <td>
-                                        <a asp-action="EditCity" asp-route-id="@item.Id" class="btn btn-outline-warning"><i class="fa-solid fa-pen-to-square">Editar</i></a>
-                                        <a asp-action="DeleteCity" asp-route-id="@item.Id" class="btn btn-outline-danger"><i class="fa-solid fa-trash">Borrar</i></a>
+
+                                        <a asp-action="EditCity" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-pencil-square"></i></a>
+                                        <a asp-action="DeleteCity" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-trash"></i></a>
 
                                     </td>
                                 </tr>
@@ -64,7 +65,7 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-
+    <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
