--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Edit.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Edit.cshtml
@@ -22,7 +22,8 @@
             <partial name="_AddOrEditMenu" />
             
             <div class="form-group mt-2">
-                <input type="submit" value="Registrar" class="btn btn-outline-primary" />
+                <input type="submit" value="Registrar" class="btn btn-outline-secondary" />
+                <a asp-action="Index" class="btn btn-outline-secondary">Volver a la lista</a>
             </div>
         </form>
     </div>
