--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Product/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Product/Index.cshtml
@@ -65,7 +65,7 @@
                                     @Html.DisplayFor(modelItem => item.MenuNmber)
                                 </td>
                                 <td>
-                                    <img src="@item.ImageFullPath" style="width:40px;" />
+                                    <img src="@item.ProductImages.FirstOrDefault().ImageFullPath" style="width:60px;" />
                                 </td>
                                 <td>
                                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-pencil-square"></i></a>
