--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Product/_ProductDetails.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Product/_ProductDetails.cshtml
@@ -1,54 +1,74 @@
-﻿
-@model FoodTrucksMenus.Data.Entities.Product
+﻿@model FoodTrucksMenus.Data.Entities.Product
 
 <hr />
-<dl class="row">
-    <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.NameProd)
-    </dt>
-    <dd class = "col-sm-10">
-        @Html.DisplayFor(model => model.NameProd)
-    </dd>
-    <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.Description)
-    </dt>
-    <dd class = "col-sm-10">
-        @Html.DisplayFor(model => model.Description)
-    </dd>
-    <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.PriceSale)
-    </dt>
-    <dd class = "col-sm-10">
-        @Html.DisplayFor(model => model.PriceSale)
-    </dd>
-    <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.Cant)
-    </dt>
-    <dd class = "col-sm-10">
-        @Html.DisplayFor(model => model.Cant)
-    </dd>
-    <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.MenuNmber)
-    </dt>
-    <dd class = "col-sm-10">
-        @Html.DisplayFor(model => model.MenuNmber)
-    </dd>
-    <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.PrepMins) 
-    </dt>
-    <dd class="col-sm-10">
-        @Html.DisplayFor(model => model.PrepMins) Mins
-    </dd>
-    <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.Category.NameCat)
-    </dt>
-    <dd class = "col-sm-10">
-        @Html.DisplayFor(model => model.Category.NameCat)
-    </dd>
-    <dt class = "col-sm-2">
-        @Html.DisplayNameFor(model => model.ImageFullPath)
-    </dt>
-    <dd class = "col-sm-10">
-        <img src="@Model.ImageFullPath" style="width:100px;" />
-    </dd>
-</dl>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <dl>
+                <dt class="col-sm-10">
+                    @Html.DisplayNameFor(model => model.NameProd)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.NameProd)
+                </dd>
+                <dt class="col-sm-10">
+                    @Html.DisplayNameFor(model => model.Description)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Description)
+                </dd>
+                <dt class="col-sm-10">
+                    @Html.DisplayNameFor(model => model.PriceSale)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.PriceSale)
+                </dd>
+                <dt class="col-sm-10">
+                    @Html.DisplayNameFor(model => model.Cant)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Cant)
+                </dd>
+            </dl>
+        </div>
+        <div class="col">
+            <dl>
+                <dt class="col-sm-10">
+                    @Html.DisplayNameFor(model => model.DateCreated)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.DateCreated)
+                </dd>
+                <dt class="col-sm-10">
+                    @Html.DisplayNameFor(model => model.PrepMins)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.PrepMins) Mins
+                </dd>
+                <dt class="col-sm-10">
+                    @Html.DisplayNameFor(model => model.Category.NameCat)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Category.NameCat)
+                </dd>
+                <dt class="col-sm-10">
+                    @Html.DisplayNameFor(model => model.MenuNmber)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.MenuNmber)
+                </dd>
+            </dl>
+        </div>
+        <div class="col">
+            <dl>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ImageFullPath)
+                </dt>
+                <dd class="col-sm-10">
+                    <img src="@Model.ImageFullPath" style="width:400px;" />
+                </dd>
+            </dl>
+        </div>
+    </div>
+</div>
+
