--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Shared/_Layout.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Truck" asp-action="Index">My Truck's</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Categorias</a>
                         </li>
                         <li class="nav-item">
@@ -54,7 +57,9 @@
         </nav>
     </header>
     <div class="container">
+        
         <main role="main" class="pb-3">
+
             @RenderBody()
         </main>
     </div>
