--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
@@ -32,11 +32,12 @@
             <div class="card" style="width: 100px; height:100px">
 
                 <div class="btn-group" style="width:100%; height:100%;">
-                    <button type="button" class="btn btn-secondary" style="width:100%">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+
+                    <a asp-action="CreateBranch" class="btn btn-secondary" style="width:100%">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                         </svg>
-                    </button>
+                    </a>
                   
                 </div>
             </div>
