--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
@@ -31,10 +31,10 @@
         <div class="col-auto" style="margin-bottom:20px;">
             <div class="card" style="width: 100px; height:100px">
 
-                <div class="btn-group" style="width:100%; height:100%;">
+                <div style="width:100%; height:100%;">
 
-                    <a asp-action="CreateBranch" class="btn btn-secondary" style="width:100%">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                    <a asp-action="CreateBranch" class="btn btn-secondary" style="width:100%; height:100%;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                         </svg>
                     </a>
@@ -59,25 +59,24 @@
                             <img src="@item.Platform.ImageFullPath" alt="Platform" style="width:60px;">
                         </div>
                         <div class="align-self-center" style="margin-left:10px">
-                            <h6 class="text-muted m-t-10 m-b-0">@item.Platform.Name</h6>
-                            <h2 class="m-t-0">953,000</h2>
+                            <h2 class="m-t-0">@item.Platform.Name</h2>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     }
-    @if (Model.TruckPlatforms.Count() != 0 && Model.TruckPlatforms.Count() <= 5)
+    @if (Model.TruckPlatforms.Count() < 5)
     {
         <div class="col-auto" style="margin-bottom:20px;">
             <div class="card" style="width: 100px; height:100px">
 
                 <div class="btn-group" style="width:100%; height:100%;">
-                    <button type="button" class="btn btn-secondary" style="width:100%">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                    <a asp-action="CreateBranch" class="btn btn-secondary" style="width:100%; height:100%;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                         </svg>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
