--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/CreateBranch.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/CreateBranch.cshtml
@@ -13,16 +13,42 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form asp-action="CreateBranch" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="Countries" />
             <input type="hidden" asp-for="States" />
             <input type="hidden" asp-for="Cities" />
+            <input type="hidden" asp-for="TruckId" />
 
             <div class="col-md-6">
-               
 
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Phone" class="control-label"></label>
+                    <input asp-for="Phone" class="form-control" />
+                    <span asp-validation-for="Phone" class="text-danger"></span>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-check">
+                        <label asp-for="IsMain" class="form-check-label"></label>
+                        <input asp-for="IsMain" type="checkbox" class="form-check-input" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Address" class="control-label"></label>
+                    <textarea asp-for="Address" class="form-control"></textarea>
+                    <span asp-validation-for="Address" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="TablesNumbers" class="control-label"></label>
+                    <input asp-for="TablesNumbers" class="form-control" type="" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
+                    <span asp-validation-for="TablesNumbers" class="text-danger"></span>
+                </div>
                 <div class="form-group">
                     <label asp-for="CountryId" class="control-label"></label>
                     <select asp-for="CountryId" asp-items="Model.Countries" class="form-control"></select>
@@ -42,7 +68,7 @@
                 </div>
             </div>
             <div class="form-group mt-2">
-                <input type="submit" value="Registrar" class="btn btn-outline-primary" />
+                <input type="submit" value="Registrar" class="btn btn-outline-secondary" />
             </div>
         </form>
     </div>
@@ -52,54 +78,54 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("#CountryId").change(function () {
-                debugger;
-                $("#StateId").empty();
-                $("#StateId").append('<option value="0">[Selecciona un departamento/estado...]</option>');
-                $("#CityId").empty();
-                $("#CityId").append('<option value="0">[Selecciona una ciudad...]</option>');
-                $.ajax({
-                    type: 'POST',
-                    url: '@Url.Action("GetStates")',
-                    dataType: 'json',
-                    data: { countryId: $("#CountryId").val() },
-                    success: function (states) {
-                        $.each(states, function (i, state) {
-                            $("#StateId").append('<option value="'
-                                + state.id + '">'
-                                + state.name + '</option>');
-                        });
-                    },
-                    error: function (ex) {
-                        alert('Failed to retrieve states.' + ex);
-                    }
-                });
-                return false;
-            })
-            $("#StateId").change(function () {
-                $("#CityId").empty();
-                $("#CityId").append('<option value="0">[Selecciona una ciudad...]</option>');
-                $.ajax({
-                    type: 'POST',
-                    url: '@Url.Action("GetCities")',
-                    dataType: 'json',
-                    data: { stateId: $("#StateId").val() },
-                    success: function (cities) {
-                        $.each(cities, function (i, city) {
-                            debugger;
-                            $("#CityId").append('<option value="'
-                                + city.id + '">'
-                                + city.name + '</option>');
-                        });
-                    },
-                    error: function (ex) {
-                        alert('Failed to retrieve cities.' + ex);
-                    }
-                });
-                return false;
-            })
-        });
-    </script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#CountryId").change(function () {
+            debugger;
+            $("#StateId").empty();
+            $("#StateId").append('<option value="0">[Selecciona un departamento/estado...]</option>');
+            $("#CityId").empty();
+            $("#CityId").append('<option value="0">[Selecciona una ciudad...]</option>');
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("GetStates")',
+                dataType: 'json',
+                data: { countryId: $("#CountryId").val() },
+                success: function (states) {
+                    $.each(states, function (i, state) {
+                        $("#StateId").append('<option value="'
+                            + state.id + '">'
+                            + state.name + '</option>');
+                    });
+                },
+                error: function (ex) {
+                    alert('Failed to retrieve states.' + ex);
+                }
+            });
+            return false;
+        })
+        $("#StateId").change(function () {
+            $("#CityId").empty();
+            $("#CityId").append('<option value="0">[Selecciona una ciudad...]</option>');
+            $.ajax({
+                type: 'POST',
+                url: '@Url.Action("GetCities")',
+                dataType: 'json',
+                data: { stateId: $("#StateId").val() },
+                success: function (cities) {
+                    $.each(cities, function (i, city) {
+                        debugger;
+                        $("#CityId").append('<option value="'
+                            + city.id + '">'
+                            + city.name + '</option>');
+                    });
+                },
+                error: function (ex) {
+                    alert('Failed to retrieve cities.' + ex);
+                }
+            });
+            return false;
+        })
+    });
+</script>
 }
