Modal delete producto delete menu

--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Create.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Create.cshtml
@@ -17,7 +17,7 @@
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="Branches" />
+            <input type="hidden" asp-for="TruckId" />
             <input type="hidden" asp-for="Categories" />
             <partial name="_AddOrEditMenu" />
             
