--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Details.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Details.cshtml
@@ -44,7 +44,7 @@
                         <tbody>
                             @foreach (var item in Model.MenuProducts)
                             {
-                                <tr>
+                                <tr id="row_@item.Id">
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Product.Cant)
                                     </td>
@@ -58,7 +58,7 @@
                                         @Html.DisplayFor(modelItem => item.Product.PriceSale)
                                     </td>
                                     <td>
-                                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-trash"></i></a>
+                                        <a onclick="ConfirmDelete(@item.Id)" class="btn btn-outline-secondary"><i class="bi bi-trash"></i></a>
                                     </td>
                                 </tr>
                             }
@@ -69,32 +69,82 @@
         </div>
     </div>
 </div>
+<!-- Modal Producto del menu inicio-->
+<div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Eliminar Producto</h3>
+            </div>
+            <div class="modal-body">
+                <h4>Estas seguro? Se eliminará este producto del tu Menu. </h4>
+
+                <div style="text-align:center;display:none" id="loaderDiv">
+                    <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <!--<img src="~/Content/img/2xkV.gif" style="height:200px;width:200px" />-->
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a class="btn btn-outline-dark" data-dismiss="modal" onclick="CancelDelete()">Cancel</a>
+                <a class="btn btn-outline-dark" onclick="DeleteMenu()">Confirm</a>
+            </div>
+        </div>
+    </div>
+</div>
+<input type="hidden" id="hiddenProductMenu" />
 @section Scripts {
     @{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
-<script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#ImagesTable').DataTable({
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json"
-            },
-            "aLengthMenu": [
-                [25, 50, 100, 200, -1],
-                [25, 50, 100, 200, "Todos"]
-            ]
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#ImagesTable').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json"
+                },
+                "aLengthMenu": [
+                    [25, 50, 100, 200, -1],
+                    [25, 50, 100, 200, "Todos"]
+                ]
+            });
+            $('#CategoriesTable').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json"
+                },
+                "aLengthMenu": [
+                    [25, 50, 100, 200, -1],
+                    [25, 50, 100, 200, "Todos"]
+                ]
+            });
         });
-        $('#CategoriesTable').DataTable({
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json"
-            },
-            "aLengthMenu": [
-                [25, 50, 100, 200, -1],
-                [25, 50, 100, 200, "Todos"]
-            ]
-        });
-    });
-</script>
+        var ConfirmDelete = function (Id) {
+            $("#hiddenProductMenu").val(Id);
+            $("#myModal").modal('show');
+        }
+        var DeleteMenu = function () {
+            $("#loaderDiv").show();
+            var Id = $("#hiddenProductMenu").val();
+            $.ajax({
+                type: "POST",
+                url: "/Menus/DeleteProductMenu",
+                data: { ProductMenuId: Id },
+                success: function (result) {
+                    $("#loaderDiv").hide();
+                    $("#myModal").modal("hide");
+                    $("#row_" + Id).remove();
+                },
+                closed: function () {
+                    $("#myModal").modal("hide");
+                }
+            })
+        }
+        var CancelDelete = function (hiddenProductMenu) {
+            $("#myModal").modal("hide");
+
+        }
+    </script>
 }
