--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Index.cshtml
@@ -28,9 +28,6 @@
                                     @Html.DisplayNameFor(model => model.CantProduct)
                                 </th>
                                 <th>
-                                    @Html.DisplayNameFor(model => model.Name)
-                                </th>
-                                <th>
                                     @Html.DisplayNameFor(model => model.Enable)
                                 </th>
                                 <th>Acciones</th>
@@ -39,7 +36,7 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                                <tr style="vertical-align:middle">
+                                <tr style="vertical-align:middle" id="row_@item.Id">
                                     <td>
                                         @Html.DisplayFor(modelItem => item.Name)
                                     </td>
@@ -48,9 +45,6 @@
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.CantProduct)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Name)
                                     </td>
                                     <td margin-top="60px">
                                         @if (item.Enable.Value)
@@ -66,7 +60,7 @@
                                     <td>
                                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-pencil-square"></i></a>
                                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-clipboard-minus"></i></a>
-                                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-secondary"><i class="bi bi-trash"></i></a>
+                                        <a onclick="ConfirmDelete(@item.Id)"  class="btn btn-outline-secondary"><i class="bi bi-trash"></i></a>
                                     </td>
                                 </tr>
                             }
@@ -77,6 +71,31 @@
         </div>
     </div>
 </div>
+<!-- Modal Menu inicio-->
+<div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Eliminar Menu</h3>
+            </div>
+            <div class="modal-body">
+                <h4>Estas seguro? Se eliminará este Menu de tu Truck. </h4>
+
+                <div style="text-align:center;display:none" id="loaderDiv">
+                    <div class="spinner-border" role="status">
+                        <span class="visually-hidden">Loading...</span>
+                    </div>
+                    <!--<img src="~/Content/img/2xkV.gif" style="height:200px;width:200px" />-->
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a class="btn btn-outline-dark" data-dismiss="modal" onclick="CancelDelete()">Cancel</a>
+                <a class="btn btn-outline-dark" onclick="DeleteMenu()">Confirm</a>
+            </div>
+        </div>
+    </div>
+</div>
+<input type="hidden" id="hiddenMenuId" />
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
@@ -95,5 +114,30 @@
                 ]
             });
         });
+        var ConfirmDelete = function (Id) {
+            $("#hiddenMenuId").val(Id);
+            $("#myModal").modal('show');
+        }
+        var DeleteMenu = function () {
+            $("#loaderDiv").show();
+            var Id = $("#hiddenMenuId").val();
+            $.ajax({
+                type: "POST",
+                url: "/Menus/DeleteMenu",
+                data: { MenuId: Id },
+                success: function (result) {
+                    $("#loaderDiv").hide();
+                    $("#myModal").modal("hide");
+                    $("#row_" + Id).remove();
+                },
+                closed: function () {
+                    $("#myModal").modal("hide");
+                }
+            })
+        }
+        var CancelDelete = function (hiddenMenuId) {
+            $("#myModal").modal("hide");
+
+        }
     </script>
 }
