--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
@@ -84,19 +84,22 @@
 <h3>Mis Menu</h3>
 <div class="row">
 
-    @foreach (var item in Model.TruckPlatforms)
+    @foreach (var item in Model.Menu)
     {
         <div class="col-auto" style="margin-bottom:20px;">
-            <div class="card" style="width: 100px; height:100px">
+            <div class="card" style="width: 260px; height:100px">
                 <div class="card-body">
+                    <a class="nav-link text-dark" asp-controller="Menus" asp-action="Details" asp-route-id="@item.Id"
+                   >
 
-                    <div class="d-flex no-block mb-3 mt-0">
-                        <div class="m-r-20 align-self-center">
-                            <span class="lstick m-r-20"></span>
-                            <img src="@item.Platform.ImageFullPath" alt="Platform" style="width:60px;">
+                        <div class="d-flex no-block mb-3 mt-0">
+                            <div class="align-self-center" style="margin-left:10px">
+                                <h6 class="text-muted m-t-10 m-b-0">@item.Name</h6>
+                                <h2 class="m-t-0">Productos: @item.CantProduct</h2>
+                            </div>
+
                         </div>
-
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -107,7 +110,7 @@
             <div class="card" style="width: 100px; height:100px">
 
                 <div class="btn-group" style="width:100%; height:100%;">
-                    <a asp-action="AddPlatforms" asp-route-id="@Model.Id" class="btn btn-secondary" style="width:100%; height:100%;">
+                    <a asp-controller="Menus" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-secondary" style="width:100%; height:100%;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                         </svg>
@@ -135,8 +138,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a href="" class="btn btn-outline-dark" data-dismiss="modal" onclick="CancelDelete()">Cancel</a>
-                <a href="#" class="btn btn-outline-dark" onclick="DeletePlatform()">Confirm</a>
+                <a class="btn btn-outline-dark" data-dismiss="modal" onclick="CancelDelete()">Cancel</a>
+                <a class="btn btn-outline-dark" onclick="DeletePlatform()">Confirm</a>
             </div>
         </div>
     </div>
@@ -151,17 +154,11 @@
         var ConfirmDelete = function (Id) {
             $("#hiddenPlatformId").val(Id);
             $("#myModal").modal('show');
-        @*alert("unasa " + Id);*@
-
-                        }
+        }
         var DeletePlatform = function () {
-
             $("#loaderDiv").show();
-
             var Id = $("#hiddenPlatformId").val();
-
             $.ajax({
-
                 type: "POST",
                 url: "/Truck/DeletePlatform",
                 data: { PlataformsId: Id },
@@ -169,15 +166,11 @@
                     $("#loaderDiv").hide();
                     $("#myModal").modal("hide");
                     $("#row_" + Id).remove();
-
                 },
                 closed: function () {
                     $("#myModal").modal("hide");
                 }
-
-
             })
-
         }
         var CancelDelete = function (PlatformsId) {
             $("#myModal").modal("hide");
