--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Details.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Details.cshtml
@@ -11,7 +11,7 @@
     </div>
     <div>
         <a asp-action="AddProduct" asp-route-id="@Model?.Id" class="btn btn-outline-secondary">Adicionar Productos</a>
-        <a asp-action="Index" class="btn btn-outline-secondary">Regresar</a>
+        <a asp-controller="Truck" asp-action="Index" class="btn btn-outline-secondary">Regresar</a>
     </div>
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
