--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Branch/Details.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Branch/Details.cshtml
@@ -1,7 +1,58 @@
-﻿
+﻿@model FoodTrucksMenus.Data.Entities.Branch
+
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
+<div class="container mt-2">
+    <h1>Sucursal @Model.NameBranch</h1>
 
-<h1>Details</h1>
+    <div>
+        <partial name="_BranchDetails" />
+    </div>
+    <div>
+        <a asp-action="AddTables" asp-route-id="@Model?.Id" class="btn btn-outline-secondary">Adicionar Mesas</a>
+        <a asp-action="Index" asp-controller="Truck" class="btn btn-outline-secondary">Regresar</a>
+    </div>
+</div>
+<hr />
+<div class="row mt-2" style="flex-direction:row;">
+<h3>Mis Mesas</h3>
 
+    @foreach (var item in Model.Tables)
+    {
+        var style = (item.Occupied == true) ? "p-3 mb-2 bg-secondary text-white" : "";
+        <div class="col-auto" style="margin-bottom:20px;" id="branch" onclick="DetailsBranch(@item.Id)">
+            <div class="card @style" style="width: 260px; height:100px">
+                <div class="card-body">
+                    <div class="d-flex no-block">
+                        <div class="m-r-20 align-self-center">
+                            <span class="lstick m-r-20"></span>
+                            <img src="@item.NameTable" alt="Truck" style="width:60px;">
+                        </div>
+                        <div class="align-self-center" style="margin-left:10px">
+                            <h6 class="m-t-10 m-b-0">@item.NameTable</h6>
+                            <h2 class="m-t-0">@item.Occupied</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+    @if (Model.Tables.Count() < 5)
+    {
+        <div class="col-auto" style="margin-bottom:20px;">
+            <div class="card" style="width: 100px; height:100px">
+
+                <div style="width:100%; height:100%;">
+
+                    <a asp-action="CreateTable" class="btn btn-secondary" style="width:100%; height:100%;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
+                        </svg>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    }
+</div>
