--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Branch/_BranchDetails.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Branch/_BranchDetails.cshtml
@@ -5,10 +5,10 @@
         <div class="col">
             <dl>
                 <dt class="col-sm-12">
-                    @Html.DisplayNameFor(model => model.CantTable)
+                    @Html.DisplayNameFor(model => model.TablesNumbers)
                 </dt>
                 <dd class="col-sm-12">
-                    @Html.DisplayFor(model => model.CantTable)
+                    @Html.DisplayFor(model => model.TablesNumbers)
                 </dd>
             </dl>
         </div>
