--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Home/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Home/Index.cshtml
@@ -1,3 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<!-- 
+    SignalR, para la parte de las mesas cuando lleguen las ordenes 
+    y cuando se actualice el estado de las mismas
+    https://www.youtube.com/watch?v=UtTVoUJUFnk
+-->
