--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Home/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Home/Index.cshtml
@@ -5,4 +5,6 @@
     SignalR, para la parte de las mesas cuando lleguen las ordenes 
     y cuando se actualice el estado de las mismas
     https://www.youtube.com/watch?v=UtTVoUJUFnk
+    SEEDDB
+    https://www.youtube.com/watch?v=FWa941vLAzg
 -->
