Preparando para usuarios

--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Details.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Menus/Details.cshtml
@@ -12,6 +12,7 @@
  
     <div>
         <a asp-action="AddProduct" asp-route-id="@Model?.Id" class="btn btn-outline-secondary">Adicionar Productos</a>
+        <a asp-controller="Product" asp-action="Index" class="btn btn-outline-secondary">Adicionar a Sucursal</a>
         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-secondary">Mis Productos</a>
         <a asp-controller="Truck" asp-action="Index" class="btn btn-outline-secondary">Regresar a Incio</a>
     </div>
