--- a/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
+++ b/FoodTrucksMenus/FoodTrucksMenus/Views/Truck/Index.cshtml
@@ -144,13 +144,13 @@
      
     }
 
-    @if (Model.TruckPlatforms.Count() < 5)
+    @if (Model.Product.Count() < 50)
     {
         <div class="col-auto" style="margin-bottom:20px;">
             <div class="card" style="width: 100px; height:100px">
 
                 <div class="btn-group" style="width:100%; height:100%;">
-                    <a asp-controller="Menus" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-secondary" style="width:100%; height:100%;">
+                    <a asp-controller="Product" asp-action="Create" asp-route-id="@Model.Id" class="btn btn-secondary" style="width:100%; height:100%;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="65" height="65" style="margin-top:10px;" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                         </svg>
